# bitfrog-cli

./: .gitignore  Cargo.toml  README.md  installer.nsi
src/: main.rs
