[package]
name = "bitfrog"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
reqwest = { version = "0.12.22", features = ["blocking", "json"] }
urlencoding = "2.1.3"
log = { version = "0.4", features = ["release_max_level_off"] }
colored = "3.0.0"
